2017-06-09  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-711

	* CMakeLists.txt, src/CMakeLists.txt:

	Add better Threads detection. The pthread library needed by
	libmicrohttpd was not properly linked on all configurations
	(clang on Ubuntu 17.04).

	* src/binio.cc (binostream::float2ieee_single):

	Remove deprecated 'register' keyword.

2017-06-08  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-710

	* CMakeLists.txt:

	Up requirement for cmake to 3.1.0 (released in December 2014).

	Make C++11 compiler support a requirement. This utilizes the macros
	CMAKE_CXX_STANDARD, CMAKE_CXX_STANDARD_REQUIRED, CMAKE_CXX_EXTENSIONS
	available since cmake 3.1.0.

	Add status output whether OEM is enabled.

	* src/main.cc (main):

	Remove C++11 support output from feature list because it is not
	optional anymore.

	Changed two loops to test C++11 range-based for loops.

	* src/m_fos.cc: Include m_xml.h for WriteXML. Fixes unresolved
	reference with Intel compiler.

2017-06-08  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-709

	* src/m_abs_lookup.cc (abs_lookupSetupBatch):

	Error handling was eating the original error message for invalid
	atmospheres leaving the user with no clue why this atmosphere failed.
	Bug reported by Alex.

2017-06-07 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-708

	* src/cloudbox.[cc,h]
	(psd_rain_W16, psd_general_MGD):
	Added. PSD core functions for Wang16 raindrop PSD and general
	modified gamma distribution. Both ported from Matlab code in CloudARTS
	and Atmlab, respectively.

	(psd_cloudice_MH97):
	Rename former IWCtopnd_MH97 / psdFromMH97 once more.

	* src/m_cloudbox.cc, methods.cc (dNdD_W16):
	Added. Wrapper WSM for Wang16 rain PSD.
	(dNdD_MH97):
	Check for negative IWC.

	* src/m_cloudbox.cc (psdMH97): IWCtopnd_MH97 / psdFromMH97 rename.

2017-06-07 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-707

	* src/cloudbox.[cc,h] (psdFromMH97):
	Fixed last-minute introduced bug *eyeroll*.
